Deploy Nginx Web Server on AWS using Terraform/igw.tf
############################################################
# INTERNET GATEWAY
############################################################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${var.project_name}-igw"

    Environment = var.environment

  }

}
