Deploy Nginx Web Server on AWS using Terraform/vpc.tf
############################################################
# VPC
############################################################

resource "aws_vpc" "main" {

  cidr_block           = var.vpc_cidr

  enable_dns_support   = true

  enable_dns_hostnames = true

  tags = {

    Name        = "${var.project_name}-vpc"

    Environment = var.environment

  }

}
